apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-deployment
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/part-of: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
        app.kubernetes.io/part-of: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:latest
          ports:
            - name: ha-port
              containerPort: 8123
          volumeMounts:
            - mountPath: "/config"
              name: homeassistant-persistent-storage
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"

      volumes:
        - name: homeassistant-persistent-storage
          persistentVolumeClaim:
            claimName: homeassistant-config-pvc
