apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http

spec:
  selector:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant
  ports:
    - name: ha-service
      protocol: TCP
      port: 80
      targetPort: ha-port
